[tool.poetry]
name = "featureflow-ml"
version = "0.1.0"
description = "Automated preprocessing and feature selection pipelines for classification and regression datasets."
authors = ["Love Kaushik <lk1203462@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/lovekaushik899/FeatureFlow-ML"
repository = "https://github.com/lovekaushik899/FeatureFlow-ML"
license = "MIT"

packages = []

include = [
    "classification_pipeline.py",
    "regression_pipeline.py"
]

[tool.poetry.dependencies]
python = ">=3.8"

numpy = ">=1.23"
pandas = ">=1.5"
scikit-learn = ">=1.3"
scipy = ">=1.10"
joblib = ">=1.3"
tqdm = ">=4.66"
shap = {version=">=0.44", optional=true}

[tool.poetry.extras]
explainability = ["shap"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
